Modals: fix scrollbar jump on edit-album-header and edit-user-header

--- a/source/style/common/_header-form.sass
+++ b/source/style/common/_header-form.sass
@@ -1,6 +1,5 @@
 .hform
-	display: table
-	position: absolute
+	position: fixed
 	visibility: hidden
 	opacity: 0
 	top: 0
@@ -10,19 +9,25 @@
 	z-index: 10
 	background-color: rgba($white, .6)
 	transform-origin: center top
+	overflow-x: hidden
+	transition: opacity $transition-time_medium, visibility $transition-time_medium
 	&.show
-		animation: hform-show $transition-time_medium
-		animation-fill-mode: forwards
-		+media(xs)
-			animation: none
-			visibility: visible
-			opacity: 1
+		visibility: visible
+		opacity: 1
+		overflow-y: scroll
+		.header-holder
+			animation: hform-show $transition-time_medium
+			animation-fill-mode: forwards
+			+media(xs)
+				animation: none
 	&.hide
-		animation: hform-hide $transition-time_medium
-		+media(xs)
-			animation: none
-			visibility: hidden
-			opacity: 0
+		visibility: hidden
+		opacity: 0
+		overflow: hidden
+		.header-holder
+			animation: hform-hide $transition-time_medium
+			+media(xs)
+				animation: none
 
 
 
@@ -32,6 +37,8 @@
 		background-position: center center
 		background-repeat: no-repeat
 		position: relative
+		z-index: 2
+		transform-origin: center top
 
 		&_edit-user
 			background-image: url(../img/bg/main-header.jpg)
@@ -51,6 +58,8 @@
 			background-color: rgba($black, 0.4)
 
 	.hform__footer
+		position: relative
+		z-index: 1
 		text-align: right
 		padding: rem(9)
 		background: $white
@@ -154,33 +163,11 @@
 @keyframes hform-show
 	0%
 		transform: perspective(1000px) rotateX(45deg) translate3d(0,0,500px)
-		visibility: hidden
-		opacity: 0
 	100%
 		transform: perspective(1000px) rotateX(0deg) translate3d(0,0,0)
-		visibility: visible
-		opacity: 1
 
 @keyframes hform-hide
 	0%
 		transform: perspective(1000px) rotateX(0deg) translate3d(0,0,0)
-		visibility: visible
-		opacity: 1
 	100%
 		transform: perspective(1000px) rotateX(45deg) translate3d(0,0,500px)
-		visibility: hidden
-		opacity: 0
-
-
-// @keyframes hform-content-show
-// 	0%
-// 		transform: perspective(600px) translate3d(0,0,150px) rotateX(-70deg)
-// 	100%
-// 		transform: perspective(600px) translate3d(0,0,0) rotateX(0)
-
-
-// @keyframes hform-content-hide
-// 	0%
-// 		transform: perspective(600px) translate3d(0,0,0) rotateX(0)
-// 	100%
-// 		transform: perspective(600px) translate3d(0,50px,50px) rotateX(20deg)
